--- a/TODO
+++ b/TODO
@@ -1,6 +1,18 @@
- * The functions for escaping need to be fixed.
- * All functions that take an array of things and
-   a count of the items in that array need Dylan
-   wrappers to convert from Dylan collections
-   to the correct underlying C representation.
- * Result parameters aren't mapped yet.
+* The functions for escaping need to be fixed.
+* Prepared queries.
+* Asynchronous query execution.
+* Notifications.
+* Event API.
+* Listen / Notify.
+* Use binary data encoding for sending parameters for queries.
+* Look up and actually be aware of type OIDs and use that for
+  type conversion.
+* Consider creating a single buffer with all of the values
+  serialized into it, but then give the right pointer into
+  that buffer. This would help reduce allocations.
+* Do we have to create a <C-pointer> for each parameter for
+  the result value of byte-storage-address?
+* Example applications.
+* Documentation.
+* Hook up this library as a backend for the sql-database
+  library in Open Dylan.
